Update with tigher UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
   <div class="container">
     <header>
       <h1>WATCH LIST</h1>
-      <p class="subtitle">A curated collection</p>
+      <p class="subtitle">A curated collection by George Vassilakis</p>
+      <div class="motif" aria-hidden="true">
+        <span class="circle c1"></span>
+        <span class="circle c2"></span>
+        <span class="circle c3"></span>
+      </div>
     </header>
 
     <nav>
