Add text to top of each tab; flip watch list; add dividers to watch list

--- a/index.html
+++ b/index.html
@@ -27,21 +27,25 @@
 
     <!-- All Movies Tab -->
     <div id="all-tab" class="tab-content active">
+      <p class="tab-desc">My chronological movie list, both watched and unwatched.</p>
       <div id="all-movies"></div>
     </div>
 
     <!-- Ranked Tab -->
     <div id="ranked-tab" class="tab-content">
+      <p class="tab-desc">Immediate post-movie rating, no hindsight.</p>
       <div id="ranked-movies"></div>
     </div>
 
     <!-- Watchlist Tab -->
     <div id="watchlist-tab" class="tab-content">
+      <p class="tab-desc">If you tell me to watch something, it will appear here.</p>
       <div id="watchlist-movies"></div>
     </div>
 
     <!-- Stats Tab -->
     <div id="stats-tab" class="tab-content">
+      <p class="tab-desc">For nerds like me.</p>
       <div class="stats-grid">
         <div class="stat-card">
           <div class="stat-value" id="total-watched">0</div>
