--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <span class="circle c3"></span>
       </div>
     </header>
+    <!-- Theme toggle button -->
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme" title="Toggle theme">☾</button>
 
     <nav>
       <button class="tab-button active" data-tab="all-tab">All</button>
